# Solfege

./: .gitignore  ANTIGRAVITY_BRIEF_COMPLETO.md  ANTIGRAVITY_BRIEF_IMMEDIATO.md  BRIEF_GITHUB_ACTIONS.md  BRIEF_SALE_PROVE.md  BRIEF_TAURI_COMPLETO.md  CHANGELOG.md  README.md  RELEASE_NOTES.md  RELEASE_v1.1.0.md  SOLFEGE_BRIEF_ANTIGRAVITY_v2.md  SOLFEGE_CREDENZIALI.md  SOLFEGE_DEBUG_AUDIT.md  SOLFEGE_NOTE_PRODUZIONE.md  SOLFEGE_REPORT_FINALE.md  SOLFEGE_TASK_PROGRESS.md  SOLFEGE_USER_GUIDE.md  tauri-keys.txt  walkthrough.md
.github/workflows/: tauri-release.yml
solfege/: .gitignore  README.md  check-invitation.ts  check_admin_meta.js  check_admin_profile.js  check_auth.js  check_db.js  check_marco_meta.js  cleanup_auth.js  create-test-admin.ts  fix_admin_role.js  generate-invite-link.ts  middleware.ts  move_admin_school.js  next.config.ts  package-lock.json  package.json  proxy.ts  reset_admin_pwd.js  test_admin_rls.js  test_invite.js  test_link.js
solfege/app/: error.tsx  globals.css  landing.css  layout.tsx  not-found.tsx  page.tsx
solfege/lib/: desktop-db.ts  is-desktop.ts
solfege/scratch/: generate-license.js
solfege/scripts/: build-tauri.js  reset_profiles.js
solfege/src-tauri/: Cargo.toml  tauri.conf.json
solfege/src-tauri/capabilities/: default.json
solfege/src-tauri/icons/: icon.icns
solfege/src-tauri/migrations/: 001_initial.sql
solfege/src-tauri/src/: database.rs  lib.rs  main.rs
solfege/src-tauri/src/commands/: auth.rs  config.rs  errors.rs  license.rs  mod.rs  updates.rs
solfege/types/: database.types.ts
supabase/: seed.sql
(+115 files in other folders)
