[package]
name = "solfege"
version = "1.1.1"
description = "Solfège — Gestionale Scuola di Musica"
authors = ["Daniele Spalletti <admindany@gmail.com>"]
edition = "2021"

[lib]
name = "solfege_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-updater = { version = "2" }
tauri-plugin-process = { version = "2" }
tauri-plugin-fs = { version = "2" }
tauri-plugin-shell = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bcrypt = "0.15"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
